syntax = "proto3";

package proto;

import "google/protobuf/struct.proto";

option go_package = "/proto";

message Cmd {
  string script = 1;
  string wd = 2;
}

message CmdCallRes {
  string output = 1;
  int32 type = 2;
}

message CmdListFolderReq {
  string folder = 1;
}

message CmdItem {
  string type = 1;
  google.protobuf.Struct value = 2;
}

message CmdAddReq {
  repeated CmdItem items = 1;
}

message CmdAddRes {
}

message FolderItem {
  string name = 1;
  bool is_folder = 2;
}

message CmdListFolderRes {
  repeated FolderItem items = 1;
}



service CmdService {
  rpc CmdCall(Cmd) returns(stream CmdCallRes);
  rpc CmdListFolder(CmdListFolderReq) returns(CmdListFolderRes);
  rpc CmdSave(CmdAddReq) returns(CmdAddRes);
}